samples/_failures_safe/1761665032_6dcb51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_276f8489.c: In function ‘main’:
./samples/SAFE/__tmp_276f8489.c:133:43: error: expected ‘)’ at end of input
  133 |     if (scanf("%u", &params.max_size) != 1
      |        ~                                  ^
      |                                           )
./samples/SAFE/__tmp_276f8489.c:133:5: error: expected declaration or statement at end of input
  133 |     if (scanf("%u", &params.max_size) != 1
      |     ^~
